hphp/test/zend/good/ext/gd/tests/imagettftext_charmap_order.php.skipif
<?php
	if(!extension_loaded('gd')){ die('skip gd extension not available'); }
	if(!function_exists('imagettftext')) die('skip imagettftext() not available');
?>
