hphp/test/zend/bad/ext/gd/tests/imagecolorclosesthwb.php.skipif
<?php
	if(!extension_loaded('gd')){ die('skip: gd extension not available'); }
	if(!function_exists('imagecolorclosesthwb')){ die('skip: imagecolorclosesthwb() not available'); }
?>